Updated Bikes routes with ids and links.
